# protfunc_eval

./: .gitignore  .gitmodules  README.md  download_cath_map.py  predict-deepgometa.py  predict-go-deepgometa.py  pyproject.toml
data/: example.fa
envs/: deepgometa.yaml  eggnog.yaml
scripts/: annotate_hmm.py  data_download.sh
src/: predict_go.py  utils.py
